@@ -468,6 +468,9 @@ Version 1.5.1 -- CVS
   - Added site configuration options to bug_report plugin. Plugin is available
     only to interface administrators by default. See more information in 
     plugins/bug_report/README file.
+  - E_NOTICE and unlink error message if user hits delete multiple times
+    before compose page has reloaded.
+
 
 Version 1.5.0 - 2 February 2004
 -------------------------------
